--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(KDL_Parser)
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.8)
+# Default to C++23
+set(CMAKE_CXX_STANDARD 23)
 
 add_definitions(-fPIC)
 
@@ -15,17 +17,9 @@ IF (orocos_kdl_FOUND)
 	link_directories(${orocos_kdl_LIBRARY_DIR})
 ENDIF()
 
-find_package(Boost REQUIRED COMPONENTS system)
-IF (Boost_FOUND)
-	message(STATUS "Boost found. Version: ${Boost_VERSION}")
-	include_directories(BEFORE SYSTEM ${Boost_INCLUDE_DIRS})
-	add_definitions(${Boost_CFLAGS})
-	link_directories(${Boost_LIBRARY_DIR})
-ENDIF()
 
 find_package(urdfdom REQUIRED)
 IF (urdfdom_FOUND)
-	message(STATUS "urdfdom found. Version: ${Boost_VERSION}")
 	include_directories(BEFORE SYSTEM ${urdfdom_INCLUDE_DIRS})
 	add_definitions(${urdfdom_CFLAGS})
 	link_directories(${urdfdom_LIBRARY_DIR})
@@ -35,10 +29,9 @@ ENDIF()
 find_library(TinyXML NAMES tinyxml)
 
 add_library(${PROJECT_NAME} STATIC ${KDL_Parser_SOURCES})
-target_link_libraries(${PROJECT_NAME} ${orocos_kdl_LIBRARIES} ${TINYXML_LIBRARIES} ${TinyXML} ${Boost_LIBRARIES} ${urdfdom_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${orocos_kdl_LIBRARIES} ${TINYXML_LIBRARIES} ${TinyXML} ${urdfdom_LIBRARIES})
 
 set(${PROJECT_NAME}_INCLUDE_DIRS 	${PROJECT_SOURCE_DIR}/include
-									${Boost_INCLUDE_DIRS}
 									${orocos_kdl_INCLUDE_DIRS}
 									${urdfdom_INCLUDE_DIRS}
 	CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
